--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weasel.memcached</groupId>
 	<artifactId>weasel-memcached</artifactId>
-	<version>1.0.0-RELEASE</version>
 
-	<!-- <parent>
+	<parent>
 		<groupId>com.weasel.parent</groupId>
 		<artifactId>weasel-parent</artifactId>
 		<version>1.0.0-RELEASE</version>
 		<relativePath>../weasel-parent/pom.xml</relativePath>
-	</parent> -->
+	</parent>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,28 +29,19 @@
 		<dependency>
 			<groupId>commons-pool</groupId>
 			<artifactId>commons-pool</artifactId>
-			<version>1.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${org.slf4j-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${org.slf4j-version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>${org.slf4j-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
 		</dependency>
 	</dependencies>
 
